[package]
name = "yplus"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.29.1", features = [
    "default",
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }
egui = "0.29.1"
egui_extras = { version = "0.29.1", features = ["default", "image"] }
env_logger = { version = "0.11.5", default-features = false, features = [
    "auto-color",
    "humantime",
] }
image = "0.25.*"

[build-dependencies]
embed-resource = "2.5.*"
