[package]
name = "yplus"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true

[dependencies]
eframe = { version = "0.29.*", features = [
    "default",
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }
egui = "0.29.*"
egui_extras = { version = "0.29.*", features = ["default", "image"] }
env_logger = { version = "0.11.*", default-features = false, features = [
    "auto-color",
    "humantime",
] }
image = "0.25.*"
font-kit = "0.14.*"

[build-dependencies]
embed-resource = "2.5.*"
